// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MainPage /> should match snapshot when is logged 1`] = `
<div
  className="mainPage"
>
  <section
    className="mainPage_content"
  >
    <h1>
      Prueba Tecnica Scotiabank
    </h1>
    <p>
      Para empezar ingrese utilizando las credenciales enviadas por correo.
    </p>
    <p>
      Tambien puede crear un nuevo usuario, sin embargo, este no tendra ninguna cuenta ni movimientos.
    </p>
    <hr />
    <p>
      Sitio web desarrollado por 
      <strong>
        David Velandia
      </strong>
    </p>
    <h2>
      Github
    </h2>
    <p>
      <strong>
        GitHub 
      </strong>
       
      <a
        href="https://github.com/adavis9012/scotiabank-assesment-client"
      >
        Cliente
      </a>
    </p>
    <p>
      <strong>
        GitHub 
      </strong>
       
      <a
        href="https://github.com/adavis9012/scotiabank-assesment-server"
      >
        Servidor
      </a>
    </p>
    <p>
      <strong>
        GitHub Personal
      </strong>
       
      <a
        href="https://github/adavis9012"
      >
        adavis9012
      </a>
    </p>
    <h2>
      Linkedin
    </h2>
    <a
      href="https://www.linkedin.com/in/andres-david-velandia"
    >
      https://www.linkedin.com/in/andres-david-velandia
    </a>
    <br />
    <br />
    <hr />
    <h2>
      Gracias!
    </h2>
  </section>
  <aside
    className="mainPage_login"
  >
    <Logout
      handleLogin={[Function]}
    />
  </aside>
</div>
`;

exports[`<MainPage /> should match snapshot when no is not logged 1`] = `
<div
  className="mainPage"
>
  <section
    className="mainPage_content"
  >
    <h1>
      Prueba Tecnica Scotiabank
    </h1>
    <p>
      Para empezar ingrese utilizando las credenciales enviadas por correo.
    </p>
    <p>
      Tambien puede crear un nuevo usuario, sin embargo, este no tendra ninguna cuenta ni movimientos.
    </p>
    <hr />
    <p>
      Sitio web desarrollado por 
      <strong>
        David Velandia
      </strong>
    </p>
    <h2>
      Github
    </h2>
    <p>
      <strong>
        GitHub 
      </strong>
       
      <a
        href="https://github.com/adavis9012/scotiabank-assesment-client"
      >
        Cliente
      </a>
    </p>
    <p>
      <strong>
        GitHub 
      </strong>
       
      <a
        href="https://github.com/adavis9012/scotiabank-assesment-server"
      >
        Servidor
      </a>
    </p>
    <p>
      <strong>
        GitHub Personal
      </strong>
       
      <a
        href="https://github/adavis9012"
      >
        adavis9012
      </a>
    </p>
    <h2>
      Linkedin
    </h2>
    <a
      href="https://www.linkedin.com/in/andres-david-velandia"
    >
      https://www.linkedin.com/in/andres-david-velandia
    </a>
    <br />
    <br />
    <hr />
    <h2>
      Gracias!
    </h2>
  </section>
  <aside
    className="mainPage_login"
  >
    <Login />
  </aside>
</div>
`;
